# coffee-series-models

./: Makefile  README.md  pyproject.toml
coffee_series/: __init__.py  dataset.py  features.py  plots.py
coffee_series/modeling/: predict.py  train.py
notebooks/: EDA_coffee_price.ipynb  analysis_serie_price.ipynb  exploratory_analysis.ipynb  exploratory_analysis_coffee_serie.ipynb
