[tool.poetry]
name = "coffee-series"
version = "0.1.0"
description = ""
authors = ["luizantoniont <luizzantonioneto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
statsmodels = "^0.14.4"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
plotly = "^6.0.0"
keras-models = "^0.0.7"
openpyxl = "^3.1.5"
prophet = "^1.1.6"
keras = "^3.8.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
